# uindex

./: .gitignore  Cargo.toml  README.md
examples/double-q/: Cargo.toml
examples/double-q/src/: fact.pest  main.rs
examples/isa/: Cargo.toml
examples/isa-many/: Cargo.toml
examples/isa-many/src/: fact.pest  main.rs
examples/isa/src/: fact.pest  kb.rs  main.rs
examples/recursive/: Cargo.toml
examples/recursive/src/: fact.pest  main.rs
examples/test-query-facts/: Cargo.toml
examples/test-query-facts/src/: main.rs
examples/three-tables/: Cargo.toml
examples/three-tables/src/: fact.pest  main.rs
python/: double-q.py  isa-many.py  isa.db  isa.py  recursive.py  three-tables.py
src/: constants.rs  facttree.rs  kbase.rs  knowledge.pest  knowledge.rs  kparser.rs  lexicon.rs  lib.rs  matching.rs  parse_result.rs  parser.rs  path.rs  segment.rs
uindex_derive/: Cargo.toml  README.md
uindex_derive/src/: lib.rs
