[package]
name = "uindex_derive"
version = "0.1.1"
authors = ["enriquepablo <enrique@cazalla.net>"]
edition = "2018"
license = "GPL-3.0+"
description = "Universal index"
homepage = "http://uindex.modus_ponens.net"
documentation = "http://doc.uindex.modus_ponens.net"
repository = "https://gitlab.com/enriquepablo/uindex"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
uindex = "0.1.1"
