[package]
name = "isa-many"
version = "0.1.0"
authors = ["enriquepablo <enrique@cazalla.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uindex = { path = "../../" }
uindex_derive = { path = "../../uindex_derive" }
log = "0.4"
env_logger = "0.7.1"
pest = "2.1.3"
pest_derive = "2.1.0"
structopt = "0.3.14"
